--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,78 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+/*Header*/
+header{
+  position: fixed;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  background: rgb(248, 241, 228);
+  max-width: 1200px;
+  top: 0;
+  height: 100px;
+ 
+
+}
+.logo img{
+  width: 200px;
+}
+ul{
+  display: flex;
+  margin-bottom: 28px;
+  justify-content: space-around;
+  gap: 193px;
+  list-style: none;
+}
+li a{
+  font-size: 16px;
+  color: black;
+}
+
+/*ProductList*/
+.productlist {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+
+}
+
+.product {
+  border: 1px solid #ccc;
+  padding: 10px;
+  width: 300px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.product-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.product-name {
+  font-size: 18px;
+}
+
+.product-description {
+  color: #555;
+}
+.product-description strong{
+  color: black;
+  font-weight: bold;
+}
+
+.product-detail span {
+  font-weight: bold;
+  color: black;
+}
+/*Footer*/
+.footer-last{
+  margin-top: 50px;
+  display: flex;
+  background-color: rgb(0, 0, 0);
+  justify-content: center;
+  align-items: center;
+  padding: 15px 0px;
+}
