--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,19 @@
   color: #888;
 }
 
+
+button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: blue;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin: 0px 100px;
+}
+
+
+button:hover {
+  background-color: #0056b3;
+}
