--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,15 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+#root {
+  /* max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem; */
+  width: 100%;
+  text-align: center;
 }
 
 a {
@@ -18,6 +27,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -46,9 +56,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -59,40 +71,42 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
 }
+
 /*Header*/
-header{
-  /* position: fixed; */
-  position: relative;
+header {
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   background: rgb(248, 241, 228);
-  max-width: 1280px;
   top: 0;
-  top: -32px;
-  height: 100px;
- 
+  height: 60px;
 
 }
-.logo img{
+
+.logo img {
   width: 200px;
 }
-ul{
+
+ul {
   display: flex;
-  margin-bottom: 28px;
+
   justify-content: space-around;
   gap: 193px;
   list-style: none;
 }
-li a{
+
+li a {
   font-size: 16px;
   color: black;
 }
@@ -101,18 +115,21 @@ li a{
   background-color: #fff;
   color: #000;
 }
+
 .light nav a {
   color: black;
 }
+
 .dark {
   background-color: #121212;
   color: #fff;
 }
+
 .dark nav a {
   color: white;
 }
 
-.dark header{
+.dark header {
   background-color: #000;
 }
 
@@ -142,20 +159,70 @@ li a{
   font-size: 18px;
 }
 
-.product-description strong{
+.product-description strong {
   font-weight: bold;
 }
 
 .product-detail span {
   font-weight: bold;
 }
+
+button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #00f;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  margin: 0 100px;
+}
 /*Footer*/
 .footer-last{
-  margin-top: 50px;
+  position: relative;
   display: flex;
   background-color: rgb(0, 0, 0);
   justify-content: center;
   align-items: center;
   padding: 15px 0px;
+  bottom: 0;
+  width: 100%;
+}
+
+.active {
+  color: red;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  font-family: Arial, sans-serif;
+}
+
+thead th {
+  border: 1px solid #ddd;
+  padding: 10px;
+}
+
+tbody td {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-bottom: none;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.action-buttons {
+  display: inline-flex;
+  gap: 0;
+  margin: 0px;
+}
+.action-buttons button:first-child {
+  margin-left: 5px;
+}
+.action-buttons button:last-child{
+ margin-right: 5px;
 }
 
