--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 
 }
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 #root {
   /* max-width: 1280px;
     margin: 0 auto;
@@ -95,7 +99,7 @@ header {
 }
 
 .logo img {
-  width: 200px;
+  width: 120px;
 }
 
 ul {
@@ -226,3 +230,58 @@ tr:nth-child(even) {
  margin-right: 5px;
 }
 
+/*Update*/
+.form-update {
+  background: #fff;
+  padding: 20px 30px;
+  border-radius: 8px;
+  width: 400px;
+  margin: 50px auto;
+  border: 1px solid black;
+}
+
+.header-update {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+label {
+  display: block;
+  margin: 10px 0 5px;
+  font-weight: bold;
+  text-align: left;
+}
+
+input[type="text"],
+input[type="number"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+  margin: 0 auto 15px;
+ 
+ 
+}
+textarea {
+  resize: none;
+}
+
+.btn-update {
+  width: 100%;
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 0 auto;
+  display: block;
+}
+
+.btn-update:hover {
+  background-color: #0056b3;
+}
