--- a/src/index.css
+++ b/src/index.css
@@ -269,19 +269,15 @@ textarea {
   resize: none;
 }
 
-.btn-update {
-  width: 100%;
-  background-color: #007bff;
-  color: white;
-  font-size: 16px;
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin: 0 auto;
-  display: block;
+.button-group {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
 }
 
-.btn-update:hover {
-  background-color: #0056b3;
+.button-group button {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 0px;
 }
