--- a/src/index.css
+++ b/src/index.css
@@ -224,7 +224,7 @@ tr:nth-child(even) {
 
 .action-buttons {
     display: inline-flex;
-    gap: 0;
+    gap: 10px;
     margin: 0px;
 }
 
@@ -262,7 +262,7 @@ label {
 input[type="text"],
 input[type="number"],
 input[type="email"],
-input[type="password"],
+input[type="password"],select,
 textarea {
     width: 100%;
     padding: 10px;
