--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -25,8 +24,9 @@
     /* max-width: 1280px;
     margin: 0 auto;
     padding: 2rem; */
-    width: 100%;
-    text-align: center;
+    /* width: 100%;
+    text-align: center; */
+    position: absolute;
 }
 
 a {
@@ -88,57 +88,6 @@ button:focus-visible {
     }
 }
 
-/*Header*/
-header {
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    background: rgb(248, 241, 228);
-    top: 0;
-    height: 60px;
-
-}
-
-.logo img {
-    width: 120px;
-}
-
-ul {
-    display: flex;
-
-    justify-content: space-around;
-    gap: 100px;
-    list-style: none;
-}
-
-li a {
-    font-size: 16px;
-    color: black;
-}
-
-.light {
-    background-color: #fff;
-    color: #000;
-}
-
-.light nav a {
-    color: black;
-}
-
-.dark {
-    background-color: #121212;
-    color: #fff;
-}
-
-.dark nav a {
-    color: white;
-}
-
-.dark header {
-    background-color: #000;
-}
 
 /*ProductList*/
 .productlist {
@@ -184,17 +133,7 @@ button {
     cursor: pointer;
 }
 
-/*Footer*/
-.footer-last {
-    position: relative;
-    display: flex;
-    background-color: rgb(0, 0, 0);
-    justify-content: center;
-    align-items: center;
-    padding: 15px 0px;
-    bottom: 0;
-    width: 100%;
-}
+
 
 .active {
     color: red;
