--- a/src/css/style.css
+++ b/src/css/style.css
@@ -139,7 +139,10 @@ a {
 }
 body {
     font-family: "SVN-Poppins", sans-serif;
+    user-select: none;
 }
+
+
 
 .pagination {
     display: flex;
@@ -208,26 +211,24 @@ header .nav-header img {
 }
 .search-box {
     position: relative;
-    display: flex;
     width: 75%;
     border-radius: 10px;
-    overflow: hidden;
+    overflow: visible;
     margin: 0px 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  }
-.search-box-sub{
-    display: none;
-}
+
 .search-box input[type="text"] {
-    flex: 1;
+    width: 100%;
     padding: 10px 15px;
     border: none;
     font-size: 16px;
     outline:none;
+    border-radius: 10px;
  }
 .search-box button {
-    height: 43px;
-    top: -2px;
+    height: 39px;
+    top: 0px;
     right: 0;
     width: 50px;
     position: absolute;
@@ -238,11 +239,73 @@ header .nav-header img {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
  }
 .search-box button i {
     color: #fff;
     font-size: 18px;
 }
+
+
+.search-results {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: #fff;
+    border: 1px solid #ddd;
+    max-height: 300px;
+    overflow-y: auto;
+    z-index: 999999 !important;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.search-overlay {
+    /* position: fixed;
+    top: 65px;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10; */
+}
+
+.no-results{
+    padding: 30px;
+    text-align: center;
+    color: #ff4d4f;
+    font-size: 15px;
+    font-weight: 600;
+    width: 100%;
+    background-color: white;
+}
+
+.search-result-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+    text-decoration: none;
+    color: #333;
+}
+
+.search-result-item:hover {
+    background: #f5f5f5;
+}
+
+.search-result-img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+.search-box-sub {
+    display: none;
+}
+
+
 .header-icon{
     position: relative;
     display: flex;
@@ -265,6 +328,7 @@ header .nav-header img {
     color: #fff;
     font-weight: 500;
 }
+
 .header-icon  i{
     position: relative;
     display: flex;
@@ -283,6 +347,106 @@ header .nav-header img {
     transition: 0.4s ease-in-out;
 }
 
+
+.header-icon-user {
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.header-icon-user i {
+    font-size: 20px;
+    transition: color 0.3s;
+    margin-left: 10px;
+}
+
+.header-icon-user::after {
+    content: "";
+    position: absolute;
+    top: -85%;
+    left: 0;
+    width: 100%;
+    height: 100px;
+  
+}
+
+/* Style cho dropdown */
+.dropdown-menu {
+    position: absolute;
+    top: 194%;
+    right: -4px;
+    background: white;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    border-radius: 0px !important;
+}
+
+
+
+/* Khi chưa đăng nhập */
+.dropdown-menu.logged-out {
+    width: 350px;
+    height: 260px;
+}
+
+/* Khi đã đăng nhập */
+.dropdown-menu.logged-in {
+    width: 200px;
+    height: 165px;
+}
+
+/* Các mục trong dropdown */
+.dropdown-item {
+    width: 100%;
+    padding: 8px;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+    display: flex;
+    margin: 0px auto;
+    justify-content: center;
+    align-items: center;
+   
+}
+.dropdown-item:hover {
+    background-color: transparent !important;
+}
+
+
+/* Phần hiển thị username */
+.username {
+    display: flex;
+    font-weight: bold;
+    padding: 8px;
+    margin: 0px auto;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Định dạng riêng cho đăng nhập/đăng ký */
+.dropdown-item.dropdown-auth {
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+}
+
+/*Line-ant*/
+.ant-slider .ant-slider-track {
+    background-color: red !important;
+    border-radius: 2px;
+}
+.ant-slider-horizontal .ant-slider-rail {
+    width: 100%;
+    height: 4px;
+    background-color: red !important;
+}
 /*header-sub*/
 .container .nav-sub{
     position: fixed;
@@ -291,7 +455,7 @@ header .nav-header img {
     background: #fff;
     box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.186);
     width: 100%;
-    z-index: 999;
+    z-index: 990;
 }
 .container .nav-sub .img-sub{
     display: none;
@@ -301,6 +465,7 @@ header .nav-header img {
     display: flex;
     list-style: none;
     justify-content: space-evenly;
+    z-index: 990;
 }
 .container .nav-sub ul li {
     position: relative;
@@ -313,7 +478,6 @@ header .nav-header img {
 }
 .container  .nav-sub ul a {
     display: inline-block;
-    padding: 20px 0px;
     text-decoration: none;
     color: #2c2c2c;
 } 
@@ -329,18 +493,19 @@ header .nav-header img {
 .container .nav-sub ul li .dropdown a {
     display: block ;
     cursor: pointer;
+    width: 300px;
     padding: 12px 16px;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.375);
     background-color: #fff;
     box-sizing: border-box;
     margin: 0px;
     text-align: center;
+    z-index: 99999;
 }
 .container .nav-sub ul li .dropdown a:hover {
-    background-color: #f1f1f1;
-    color: #333;
-   
+    background-color: #d62027;
+    color: #fff;
 }
+
 .container .nav-sub .toggle-label {
     cursor: pointer;
     display: inline-block;
@@ -359,11 +524,11 @@ header .nav-header img {
  .carousel {
     width: 100%;
     position: relative;
-    margin-top: 100px;
+    margin-top: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
+   
  }
 
 .control button {
@@ -376,13 +541,13 @@ header .nav-header img {
     background-color: black;
  }
 .carousel .next {
-    right: 13px;
+    right: 1px;
     color: white;
     display: none;
  }
 
 .carousel .prev {
-    left: 13px;
+    left: 1px;
     color: white;
     display: none;
  }
@@ -421,11 +586,228 @@ header .nav-header img {
     margin: 20px;
     font-weight: 700;
 }
-/*Option*/
-.option{
-    margin: 20px;
+
+/*Home*/ 
+
+.home-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
     
 }
+.product-home-name ,.text-home-name{
+    margin-top: 50px;
+    text-align: center;
+    color: rgb(201, 33, 39);
+    font-size: 24px;
+    line-height: 30px;
+}
+
+.home-img img {
+    width: 150px;
+    height: 120px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+.home-img {
+    display: flex;
+    justify-content: center;
+    gap: 49px;
+    flex-wrap: wrap;
+}
+.home-img span{
+    display: flex;
+    justify-content: center;
+}
+/*code*/
+.code p{
+margin-top: 50px;
+text-align: center;
+color: rgb(201, 33, 39);
+font-size: 24px;
+line-height: 30px;
+}
+
+.code-content {
+    margin-top: 50px;
+}
+.code-content .voucher-items-list{
+margin-top: 50px;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+overflow: hidden;
+padding: 5px 0;
+margin: 0 -12px;
+gap: 13px;
+}
+.voucher-item{
+    width: 33.33333333%;
+    min-width: 33.33333333%;
+    margin: 0;
+}
+.voucher-item-info {
+    display: flex;
+    border-radius: 4px;
+    min-height: 116px;
+    position: relative;
+    width: 100%;
+}
+.voucher-item-info:before {
+    content: "";
+    width: 1px;
+    border-right: 1px dashed #cbd5e1;
+    top: 15px;
+    bottom: 15px;
+    position: absolute;
+    right: 123px;
+    z-index: 4;
+}
+.voucher-item-detail {
+    flex-grow: 1;
+    padding: 16px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(40, 41, 61, .08), 0 .5px 6px rgba(96, 97, 112, .16);
+    width: calc(100% - 141px);
+    width: -o-calc(100% - 141px);
+    border-radius: 4px 0 0 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.voucher-item-title {
+    display: block;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 4px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+.voucher-item-des {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 5px;
+    line-clamp: 2;
+    overflow: hidden;
+}
+.voucher-item-date {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: auto;
+    align-items: flex-end;
+    line-height: 16px;
+    justify-content: space-between;
+}
+.voucher-item-action {
+    width: 110px;
+    min-width: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    order: 4;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(40, 41, 61, .08), 0 .5px 6px rgba(96, 97, 112, .16);
+    position: relative;
+    border-radius: 0 4px 4px 0;
+    padding: 0 17px 0 2px;
+}
+.voucher-item-action:before {
+    content: "";
+    height: 17px;
+    width: 30px;
+    position: absolute;
+    left: -30px;
+    background-image: url("/src/img/voucher.png");
+    top: -6px;
+}
+ .voucher-item-action .action {
+    width: auto;
+    font-weight: 600;
+    background: #e03e2d;
+    border: 1px solid #e03e2d;
+    color: #fff;
+    font-size: 14px;
+    line-height: 20px;
+    text-transform: none;
+    white-space: nowrap;
+    cursor: pointer;
+    padding: 5px 10px 4px;
+    display: block;
+    width: 100%;
+    text-align: center;
+    border-radius: 2px;
+}
+.voucher-item-action .action span{
+    color: white;
+}
+.voucher-item-action::after {
+    content: "";
+    height: 17px;
+    width: 30px;
+    position: absolute;
+    left: -30px;
+    background-size: 100% 100%;
+    background-image: url("/src/img/vouchersub.png");
+     bottom: -7px;
+}
+.voucher-item-info:after {
+    content: "";
+    width: 30px;
+    background-color: #fff;
+    position: relative;
+    margin: 11px 0 10px;
+    min-width: 30px;
+    z-index: 3;
+}
+
+/*Line-home-page*/
+.line-home-page{
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 24px;
+    position: relative;
+}
+.line-home-page:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0px;
+    bottom: 0px;
+    background-color: rgb(227, 227, 227);
+}
+.line-home-page span{
+    display: flex;
+    justify-content: center;
+    width: 100px;
+    height: 3px;
+    background-color: rgb(201, 33, 39);
+    z-index: 50;
+}
+
+/*CategoryList-Button*/
+.categoryList-button{
+    padding: 10px 25px;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 500;
+    background-color: rgb(201, 32, 39);
+    border: none;
+
+}
+
+
+
+
+/*Option*/
+
 .option label ,.option-sub label{
     font-size: 14px;
     font-weight: 600;
@@ -441,8 +823,7 @@ header .nav-header img {
     font-size: 14px;
     cursor: pointer;
     transition: border-color 0.3s;
-    width: 151px;
-    margin: 10px;
+    margin-top: 10px;    
 }
 .option select:hover,.option-sub select:hover{
     border-color: #888;
@@ -465,7 +846,6 @@ header .nav-header img {
     flex-direction: column;
     justify-content: space-between;
     height: 98%;
-    border: 1px solid #e0e0e0;
     border-radius: 8px;
     overflow: hidden;
     transition: transform 0.2s ease;
@@ -486,7 +866,6 @@ header .nav-header img {
     color: black;
 }
 .product-card .product-infor {
-    border-top: 1px solid gray;
     padding: 15px;
     flex-grow: 1;
     display: flex;
@@ -501,8 +880,9 @@ header .nav-header img {
 }
 .product-card .product-infor div {
     font-size: 16px;
-    color: #ff5722;
+    color: rgb(201, 32, 39);
     margin-bottom: 10px;
+    font-weight: 700;
 }
 .product-card .product-infor p {
     min-height: 40px;
@@ -555,7 +935,7 @@ header .nav-header img {
 .container .row .detail-img{
     width: 60%;
     display: block;
-    margin: 0 auto;
+    margin: 93px auto;
 }
 /*Content-home*/
 .content-product{
@@ -1138,7 +1518,6 @@ header .nav-header img {
     display: flex;
     padding: 20px;
     justify-content: space-between;
-    border: 1px solid #80808059;
     margin-bottom: 10px;
 }
 .container .row .cart-content .cart-box{
@@ -1233,7 +1612,7 @@ header .nav-header img {
 }
 /*User*/
 form {
-    width: 400px;
+    width: 500px;
     max-width: 100%;
     margin: 0px auto;
     border: 1px solid #ccc;
@@ -1241,13 +1620,18 @@ form {
     box-shadow: 0 0 12px 12px rgba(0, 0, 0, 0.2);
     padding: 40px;
 }
-.form-user{
-  margin-top: 200px;  
-}
+
 .header-user {
     font-size: 30px;
     margin-bottom: 20px;
     text-align: center;
+}
+
+.form-user {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .form-user label {
     display: block;
@@ -1304,12 +1688,75 @@ thead th {
 tbody td {
     padding: 10px;
     border: 1px solid #ddd;
-    border-bottom: none;
+    line-height: 20px;
+    vertical-align: middle;
+    
 
 }
 
 tr:nth-child(even) {
     background-color: #f9f9f9;
+}
+
+/*order*/
+.form-oder {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    width: 100%;
+    box-shadow: none;
+    border: none;
+}
+
+.form-oder input,
+.form-oder textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.form-oder input:focus,
+.form-oder textarea:focus {
+    border-color: #e60000;
+    outline: none;
+}
+
+.form-oder textarea {
+    height: 100px;
+    resize: none;
+}
+
+.error {
+    color: red;
+    font-size: 14px;
+    margin-top: 6px;
+}
+
+.order-list p,
+.order-list h4,
+.order-list ul ,.order-list img{
+    margin-bottom: 10px;
+    
+}
+
+.order-list span{
+    font-weight: normal;
+}
+
+.cancel-order-btn {
+    display: block;
+    padding: 11px 32px;
+    border-radius: 4px;
+    font-size: 14px;
+    margin: 5px 0px 8px;
+    border: none;
+    color: #fff;
+    font-family: "SVN-Poppins", sans-serif;
+    background-color: rgb(201, 33, 39);
+    cursor: pointer;
 }
 
 /*Reponsive*/
@@ -1337,11 +1784,17 @@ tr:nth-child(even) {
     display: block;
     margin-top: 27px;
 }
+.home-img {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+}
 }
 @media screen and (max-width: 991.98px) {
-#root {
+/* #root {
  position: absolute;
-}
+} */
  .container {
  padding: 0 2rem;
 }
@@ -1387,6 +1840,12 @@ tr:nth-child(even) {
     font-size: 14px;
 }
 
+.hover-link:hover {
+    color: red !important;
+    transition: color 0.3s ease-in-out;
+}
+
+
 #check:checked~ .overlay {
     visibility: visible;
     opacity: 1;
@@ -1423,35 +1882,29 @@ tr:nth-child(even) {
     display: block;
 }
 
-
-
 .container .nav-sub .toggle-label i {
     display: block;
 }
 .container .nav-sub .toggle-label {
     display: flex;
-    gap: 6px;
+    gap: 10px;
     justify-content: center;
     color: #2c2c2c;
     font-size: 14px;
     font-weight: 600;
 }
 .carousel {
-    margin-top: 120px;
+    margin-top: 75px;
 }
 .product-card img {
-    width: 60%;
+  
     height: auto;
     object-fit: cover;
     display: block;
     margin: 0 auto;
 }
-.option{
-    display: grid;
-}
-.option select{
-    width: 40%;
-}
+
+
 .search-box{
     display: none;
 }
@@ -1469,7 +1922,7 @@ tr:nth-child(even) {
     z-index: 997;
 }
 .search-box-sub {
-    position: relative;
+    /* position: relative; */
     display: flex;
     width: 60%;
     border-radius: 10px;
@@ -1478,7 +1931,7 @@ tr:nth-child(even) {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 .search-box-sub input[type="text"] {
-    flex: 1;
+    width: 100%;
     padding: 10px 15px;
     border: none;
     font-size: 16px;
@@ -1489,7 +1942,7 @@ tr:nth-child(even) {
     top: -2px;
     right: 0;
     width: 50px;
-    position: absolute;
+    /* position: absolute; */
     width: 50px;
     background-color: #d32f2f;
     border: none;
@@ -1532,13 +1985,33 @@ tr:nth-child(even) {
 .cart .container .row .img-cart{
     width: 98%;
 }
+
+
+
+
+
+
+.sub{
+    position: fixed;
+    top: 14px;
+    z-index: 990;
+}
+.product-list{
+    display: block !important;
+}
+
+.container .row .cart-content-sub {
+    margin: 0 -10px;
+}
+
+
 }
 @media screen and (max-width: 767.98px) {
 .container {
  padding: 0 2rem;
 }
 .product-card img {
-    width: 50%;
+   
     height: auto;
     object-fit: cover;
     display: block;
@@ -1568,7 +2041,7 @@ tr:nth-child(even) {
     font-size: 25px;
 }
 .product-card img {
-    width: 40%;
+    
     height: auto;
     object-fit: cover;
     display: block;
